--- a/content/articles/fst/index.mdx
+++ b/content/articles/fst/index.mdx
@@ -4,12 +4,11 @@ slug: '/fujitsu-2019'
 bannerImage: './fuji.jpg'
 bannerTitle: 'Internship at Fujitsu, Japan.'
 bannerSubTitle: 'A summary of my internship in the Land of the Rising Sun'
-isBannerDark: true
 ---
 
+import Grid from '../../../src/components/shared/Grid'
 
-
-# Working at Fujitsu Software Technologies 
+## Working at Fujitsu Software Technologies 
 
 
 I had the opportunty to work with the Fujutsu Software Technologies (FST) team in Matsumoto, Japan. This was an amazing experience where I was pushed beyond my comfort zone.  
@@ -17,14 +16,26 @@ During the summer, I challenged in every aspect of my life, from developing with
 Prior to arriving there, I had set some personal goals to know what I wanted to improve on. My main priorities was focused on improving my current programming skills and learning from some of the people working for one of the largest IT services provider in Japan.  
 
 
+<Grid columns={2}>
 
-|||
-|------------- | -------------|
-| ![](./stack.png "FST Ideathon")  |   <h1>Overview</h1>This summer was one of the most challenging, yet rewarding, experience I've had. Traveling overseas and experiencing a new culture really expanded my horizons and thought me valuable lessons. <br/> At FST, I developed an interactive visualization tool using D3.js and Vue.js. The complex user interactions requested by the client trulty tested my analytical skills and pushed my problem-solving skills to the next level. <br/> The biggest challenge was the communcation barrier. As Matsumoto is closer to a country-side city, not many people spoke English inside/outisde of work. It took time and effort to talk with my collegues, which made learning from them a significanlty difficult task.  |
-| ![](./matsumoto-castle.jpg "Matsumoto Castle") | ![](./fst_ideathon.JPG "FST Ideathon") 
+![](./stack.png "FST Ideathon")
+
+<div>
+ <h2>Overview</h2>
+ <p>This summer was one of the most challenging, yet rewarding, experience I've had. Traveling overseas and experiencing a new culture really expanded my horizons and thought me valuable lessons.</p>
+ <p>At FST, I developed an interactive visualization tool using D3.js and Vue.js. The complex user interactions requested by the client trulty tested my analytical skills and pushed my problem-solving skills to the next level.</p>
+ <p>The biggest challenge was the communcation barrier. As Matsumoto is closer to a country-side city, not many people spoke English inside/outisde of work. It took time and effort to talk with my collegues, which made learning from them a significanlty difficult task. </p> 
+</div>
+
+![](./matsumoto-castle.jpg "Matsumoto Castle")
+
+
+![](./fst_ideathon.JPG "FST Ideathon") 
+</Grid>
 
 
 
-# Summary
+
+## Summary
 
 My experience at FST was not perfect, but it will be something that I will cherish forever, and I want to thank everybody at FST for their kindness and for the time they took to teach me about their wonderful culture. It really showed me how little I knew about the world, which excites me even more as it means that I just have that much more to learn.
