fixed article text

--- a/content/articles/fst/index.mdx
+++ b/content/articles/fst/index.mdx
@@ -22,7 +22,7 @@ Internship | Vue.js
 
 I had the opportunty to work with the Fujutsu Software Technologies (FST) team in Matsumoto, Japan. This was an amazing experience where I was pushed beyond my comfort zone.  
 During the summer, I challenged in every aspect of my life, from developing with new frameworks to adapting to a foreign culture.  
-Prior to arriving there, I had set some personal goals to know what I wanted to improve on. My main priorities was focused on improving my current programming skills and learning from some of the people working for one of the largest IT services provider in Japan.  
+Prior to arriving there, I had set some personal goals to know what I wanted to improve on. My main priorities were focused on improving my current programming skills and learning from some of the people working for one of the largest IT services provider in Japan.  
 
 
 </Grid>
@@ -33,9 +33,9 @@ Prior to arriving there, I had set some personal goals to know what I wanted to 
 
 ## Overview
 
-This summer was one of the most challenging, yet rewarding, experience I've had. Traveling overseas and experiencing a new culture really expanded my horizons and thought me valuable lessons.
-At FST, I developed an interactive visualization tool using D3.js and Vue.js. The complex user interactions requested by the client trulty tested my analytical skills and pushed my problem-solving skills to the next level.
-The biggest challenge was the communcation barrier. As Matsumoto is closer to a country-side city, not many people spoke English inside outisde of work. It took time and effort to talk with my collegues, which made learning from them a significanlty difficult task.
+This summer was one of the most challenging, yet rewarding, experience I've had. Traveling overseas and experiencing a new culture really expanded my horizons and thought me valuable lessons.  
+At FST, I developed an interactive visualization tool using D3.js and Vue.js. The complex user interactions requested by the client truly tested my analytical skills and pushed my problem-solving skills to the next level.  
+The biggest challenge was the communication barrier. As Matsumoto is closer to a country-side city, not many people spoke English inside\outisde of work. It took time and effort to talk with my colleagues, which made learning from them a significantly difficult task.
 
 </Grid>
 
