--- a/content/articles/fst/index.mdx
+++ b/content/articles/fst/index.mdx
@@ -30,7 +30,7 @@ Prior to arriving there, I had set some personal goals to know what I wanted to 
 
 ## Overview
 
-This summer was one of the most challenging, yet rewarding, experience I've had. Traveling overseas and experiencing a new culture really expanded my horizons and thought me valuable lessons.  
+This summer was one of the most challenging, yet rewarding, experience I've had. Traveling overseas and experiencing a new culture really expanded my horizons and taught me valuable lessons.  
 At FST, I developed an interactive visualization tool using D3.js and Vue.js. The complex user interactions requested by the client truly tested my analytical skills and pushed my problem-solving skills to the next level.  
 The biggest challenge was the communication barrier. As Matsumoto is closer to a country-side city, not many people spoke English inside\outisde of work. It took time and effort to talk with my colleagues, which made learning from them a significantly difficult task.
 
